k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
  namespace: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
        - name: frontend-react
          image: felipeyorick/frontend-react:8db5f5955b811a1c45cf98a61797ebed8873ccec
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-react-service
  namespace: develop
spec:
  selector:
    app: frontend-react
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
