k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickandmorty-service
  namespace: develop
spec:
  selector:
    app: rickandmorty
  ports:
    - protocol: TCP
      port: 80        # Puerto expuesto dentro del cluster
      targetPort: 80  # Puerto del contenedor
      protocol: TCP
  type: ClusterIP       # Opciones: ClusterIP (default), NodePort, LoadBalancer
